# PAT

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  execution_log_v1.0.0.txt  mkdocs.yml  output.json.proof.json  output.json.receipt.json  provenance.json  provenance.signed.example.json  pyproject.toml  release_manifest.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  language_profile_request.md
.github/workflows/: ci.yml  release.yml
configs/language_profiles/: af.json  ak.json  am.json  ar_mag.json  bem.json  ber.json  bm.json  dag.json  din.json  dyu.json  ee.json  ff.json  fon.json  gaa.json  gez.json  guz.json  ha.json  ig.json  kab.json  kam.json  (+52 more)
dashboard/: index.html
docs/: ARCHITECTURE.md  ARCHIVAL_HASH_NOTES.md  CHANGELOG.md  COMMUNITY_LANGUAGE_CONTRIBUTION.md  ETHICAL_USE.md  FIRST_PUBLIC_RELEASE_CHECKLIST.md  GITHUB_RELEASE_DRAFT.md  GITHUB_RELEASE_TEXT.md  GOVERNANCE.md  INDEX.md  LANDING_PAGE.md  OVERVIEW.md  PUBLICATION_CHECKLIST.md  PUBLIC_RELEASE_MANIFEST.md  REPOSITORY_METADATA.md  REPRODUCIBILITY.md  SIGNED_PROVENANCE.md  ZENODO_PUBLICATION_TEXT.md  ZENODO_RELEASE_NOTES.md  gtm-blueprint.md
schemas/: pipeline_output.schema.json
src/: pat_cli.py  pat_release.py  pat_release_pack.py  pat_version.py
tests/: test_batch_builder.py  test_chat.py  test_pipeline.py  test_policy.py  test_profiles.py  test_proof_export.py  test_provenance.py  test_receipts.py  test_release_check.py  test_release_summary.py  test_schema_validation.py  test_version.py
(+27 files in other folders)
